--- a/sustain-sphere/.env
+++ b/sustain-sphere/.env
@@ -7,6 +7,11 @@ NEXTAUTH_URL_INTERNAL=http://10.240.8.16
 GOOGLE_CLIENT_ID=692872071908-05rtvc6703egsbq0l9qhgft6dpgc0bgm.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGO_URL=mongodb+srv://techdazex:AshishYadavTeamOf6@sustain-sphere-clustor.hq0aqjd.mongodb.net/
-SIGNIN_URL=http://test.co
+
+
+SIGNIN_URL=api/auth/signin
+SIGNUP_URL=api/auth/signup
+BACKEND_BASE_URL=http://localhost:9000/
 SALT_ROUNDS=11
 SECRET=tgexjLvqz9GI24cMf4yv8ANPK/uKpxrroC6cQMoWkts=
+
