jwt token for signup

--- a/sustain-sphere/.env
+++ b/sustain-sphere/.env
@@ -15,3 +15,4 @@ BACKEND_BASE_URL=http://localhost:9000/
 SALT_ROUNDS=11
 SECRET=tgexjLvqz9GI24cMf4yv8ANPK/uKpxrroC6cQMoWkts=
 
+FRONT_END_SECRET=8AFDF2A34E86D4F32E46BBF8961303BE
