--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
@@ -16,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
@@ -23,9 +25,11 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
+    "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
