--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -9,6 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
     "@next/font": "^13.4.19",
     "@radix-ui/react-label": "^2.0.2",
     "@types/draft-js": "^0.11.12",
@@ -21,9 +31,12 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "draft-js": "^0.11.7",
+    "editorjs-style": "^3.0.3",
+    "editorjs-tooltip": "^1.1.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -38,6 +51,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.198",
     "dotenv": "^16.3.1"
   }
 }
