Lexical editor and blog post

--- a/sustain-sphere/.env
+++ b/sustain-sphere/.env
@@ -11,6 +11,7 @@ MONGO_URL=mongodb+srv://techdazex:AshishYadavTeamOf6@sustain-sphere-clustor.hq0a
 
 SIGNIN_URL=api/auth/signin
 SIGNUP_URL=api/auth/signup
+BLOG_POST_URL=http://localhost:5000/api/user/blog
 BACKEND_BASE_URL=http://localhost:5000/
 SALT_ROUNDS=11
 SECRET=tgexjLvqz9GI24cMf4yv8ANPK/uKpxrroC6cQMoWkts=
