--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -9,19 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@editorjs/checklist": "^1.5.0",
-    "@editorjs/code": "^2.8.0",
-    "@editorjs/editorjs": "^2.28.0",
-    "@editorjs/embed": "^2.5.3",
-    "@editorjs/header": "^2.7.0",
-    "@editorjs/image": "^2.8.1",
-    "@editorjs/link": "^2.5.0",
-    "@editorjs/list": "^1.8.0",
-    "@editorjs/quote": "^2.5.0",
-    "@editorjs/raw": "^2.4.0",
+    "@lexical/code": "^0.12.2",
+    "@lexical/list": "^0.12.2",
+    "@lexical/markdown": "^0.12.2",
+    "@lexical/react": "^0.12.2",
+    "@lexical/rich-text": "^0.12.2",
+    "@lexical/selection": "^0.12.2",
+    "@lexical/table": "^0.12.2",
     "@next/font": "^13.4.19",
     "@radix-ui/react-label": "^2.0.2",
-    "@types/draft-js": "^0.11.12",
+    "@radix-ui/react-toolbar": "^1.0.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
@@ -30,12 +27,10 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "draft-js": "^0.11.7",
-    "editorjs-style": "^3.0.3",
-    "editorjs-tooltip": "^1.1.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
+    "lexical": "^0.12.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
@@ -50,6 +45,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@lexical/link": "^0.12.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.198",
     "dotenv": "^16.3.1"
