--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -23,6 +23,8 @@
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.9.2",
+    "antd-img-crop": "^4.13.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
