--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -19,6 +19,7 @@
     "@next/font": "^13.4.19",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-toolbar": "^1.0.4",
+    "@tremor/react": "^3.7.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
@@ -28,6 +29,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -40,6 +42,7 @@
     "postcss": "8.4.29",
     "preline": "^1.9.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.68.0",
@@ -51,6 +54,7 @@
     "@lexical/link": "^0.12.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
+    "@types/chart.js": "^2.9.38",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.198",
     "dotenv": "^16.3.1"
