--- a/sustain-sphere/package.json
+++ b/sustain-sphere/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "lexical": "^0.12.2",
     "lodash": "^4.17.21",
@@ -51,6 +52,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@lexical/link": "^0.12.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
